fix: weird hover behavior on iOS

--- a/web/style/main.scss
+++ b/web/style/main.scss
@@ -85,9 +85,11 @@ body {
       &.info {
         background: light-dark(#ccffcc, #003300);
         background-blend-mode: multiply;
-        &:not([open]) > summary:hover:not(:active) {
-            background: #10ee10;
+        @media (any-hover: hover) {
+          &:not([open]) > summary:hover:not(:active) {
+              background: #10ee10;
           }
+        }
         & > summary {
           &::marker {
             content: "\1F50E  ";
